# test_task_web_api

./: docker-compose.yml  pyproject.toml
src/config/: settings.py  urls.py
src/currency/: models.py  serializers.py  services.py  tasks.py  urls.py
src/currency/migrations/: 0001_initial.py
src/currency/views/: add.py  available.py  current.py  history.py  toggle.py
